model scroll issue on mobile and api-key update

--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -52,6 +52,25 @@
 	}
 }
 
+.modal { 
+    position: fixed; 
+    top: 3%; 
+    right: 3%; 
+    left: 3%; 
+    width: auto; 
+    margin: 0; 
+}
+.modal-body { 
+    height: 70%; 
+}
+.modal-body { 
+    max-height: 350px; 
+    padding: 15px; 
+    overflow-x:hidden;
+    overflow-y: auto; 
+    -webkit-overflow-scrolling: touch; 
+ }
+
 .modal-content .photo-detail-img{
 	opacity: 0;
 	transition: all .5s ease;
